# TA_V8

./: .gitignore  LICENSE  README.md  pyproject.toml  version.py
AI_Support_Services_Containers/: Dockerfile.multilingual-e5-large  Dockerfile.neo4j  Dockerfile.ollama  docker-compose-master.yml  health-monitor.sh  setup-high-performance-stack.sh
RAG_MCP/: .gitignore  CLEANUP_SUMMARY.md  Dockerfile  Dockerfile.rag_agent_corrected  Dockerfile.rag_agent_fixed  HTTP_SSE_MIGRATION_COMPLETE.md  IMPLEMENTATION_RECOMMENDATIONS.md  IMPLEMENTATION_SUCCESS_REPORT.md  MIGRATION_COMPLETE.md  MIGRATION_COMPLETE_SUMMARY.md  MIGRATION_PLAN_V2.md  MODEL_MISMATCH_RESOLVED.md  PRODUCTION_READY.md  README.md  SECURITY_SETUP.md  STORAGE_INTEGRATION_COMPLETE.md  SYSTEM_READY.json  UV_TO_PIP_MIGRATION.md  __init__.py  comprehensive_test.py  config.env  deploy.sh  deploy_rag_mcp.sh  docker-compose-production.yml  docker-compose.yml  document_chunker.py  initialize_databases.sh  install_and_test.sh  manage_http_services.sh  manage_services.sh  prepare_demo_system.py  pyproject.toml  query_system.py  rag_agent_team.py  requirements-dev.txt  requirements.txt  setup_uv.sh  tao_integration.py  test_complete_integration.py  test_http_mcp_services.py  (+11 more)
RAG_MCP/Databases/graph/: neo4j_schema.cypher
RAG_MCP/Databases/relational/: postgresql_schema.sql
RAG_MCP/TAB_MCP_Client/: __init__.py  config.py  requirements.txt  startup.sh
RAG_MCP/TAB_MCP_Client/backend/: __init__.py  app.py  mcp_client.py  models.py  services.py
RAG_MCP/TAB_MCP_Client/frontend/: index.html
RAG_MCP/TAB_MCP_Client/samples/: domain_knowledge_config_example.yaml  tenant_config_example.yaml
RAG_MCP/database_schemas/: postgresql_schema.sql
RAG_MCP/deployment/: docker-compose-mcp.yml
RAG_MCP/deployment/docker-compose/: mcp-services.yml
RAG_MCP/infrastructure/databases/: neo4j_schema.cypher  postgresql_schema.sql
RAG_MCP/infrastructure/databases/postgresql/: schema.sql
RAG_MCP/infrastructure/docker/: Dockerfile.agent_team  Dockerfile.chunking  Dockerfile.embedding_mcp  Dockerfile.retriever
RAG_MCP/infrastructure/docker/services/: Dockerfile.chunking  Dockerfile.embedding_mcp  Dockerfile.retriever
RAG_MCP/legacy/: unified_mcp_server.py
RAG_MCP/mcp_services/chunking/: server.py
RAG_MCP/mcp_services/embedding/: server.py
RAG_MCP/mcp_services/retrieval/: server.py
RAG_MCP/new_fixes_v2_MCP_Compliance/: Dockerfile.chunking  Dockerfile.embedding_mcp  Dockerfile.retriever  MCP_Integration_Guide.md  chunking_mcp_server.py  embedding_mcp_server.py  retriever_mcp_server.py  test_mcp_servers.py
RAG_MCP/platform_modules/TAB_integration/: knowledge_builder.py
RAG_MCP/platform_modules/TAE_integration/: tool_caller.py
RAG_MCP/platform_modules/TAO_integration/: mcp_registry.py
RAG_MCP/shared/: __init__.py  base.py  config.py
RAG_MCP/systemd/: chunking-mcp.service  embedding-mcp.service  rag-agent-team.service  rag-mcp-http.service  retrieval-mcp.service  ta-v8-rag.target  tab-mcp-client.service
TAB_V1/: TAB_V1_Docs_V1.md  config.env  pyproject.toml
TAE_V1/: TAE_V1_Docs_V1.md  config.env  pyproject.toml
TAO_V1/: TAO_V1_Docs_V1.md  config.env  pyproject.toml
ta_v8/: __init__.py
ta_v8/scripts/: __init__.py  health.py  setup.py
